Fix column gap

--- a/www/css/northall.css
+++ b/www/css/northall.css
@@ -59,7 +59,7 @@ body {
 .image-gallery {
 	line-height: 0;
 	column-count: 3;
-	column-gap: 9px;
+	column-gap: 5px;
 }
 
 .image-gallery img {
